syntax = "proto3";

package EventCatalog;

option go_package = "./proto;EventCatalog";

service EventCatalog {
  rpc CreateEventWithCategory(CreateEventWithCategoryRequest) returns (CreateEventWithCategoryResponse) {}
  rpc GetAllEvents(GetAllEventsRequest) returns (GetAllEventsResponse) {}
  rpc GetEventById(GetEventByIdRequest) returns (GetEventByIdResponse) {}
  rpc GetAllCategories(GetAllCategoriesRequest) returns (GetAllCategoriesResponse) {}
  rpc UpdateEvent(UpdateEventByEventIdRequest) returns (UpdateEventByEventIdResponse) {}
  rpc DeleteEventById(DeleteEventByIdRequest) returns (DeleteEventByIdResponse) {}
  rpc GetEventByField(GetEventByFieldRequest) returns (GetEventByFieldResponse) {}
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
}

enum Category {
  UNKNOWN = 0;
  CONCERTS = 1;
  MUSICALS = 2;
  PLAYS = 3;
}

message CreateCategoryRequest {
  Category category = 1;
}

message CreateCategoryResponse {
  string category = 1;
}

message GetAllCategoriesRequest {

}

message GetAllCategoriesResponse {
  repeated string categories = 1;
}

message Event {
  string name = 1;
  float price = 2;
  string artist = 3;
  int64 date = 4;
  string description = 5;
  string image_url = 6;
  string id = 7;
}


message CreateEventWithCategoryRequest {
  string name = 1;
  float price = 2;
  string artist = 3;
  int64 date = 4;
  string description = 5;
  string image_url = 6;
  string category_id = 7;
}

message CreateEventWithCategoryResponse {
  Event event = 1;
}

message GetAllEventsRequest {

}

message GetAllEventsResponse {
  repeated Event events = 1;
}

message GetEventByIdRequest {
  string id = 1;
}

message GetEventByIdResponse {
  Event event = 1;
}

message CreateCategoryWithEventRequest {
  string event_id = 1;
  string name = 2;
}

message CreateCategoryWithEventResponse {
//  Category category = 1;
}

message UpdateEventByEventIdRequest {
  string event_id = 7;
  string name = 1;
  float price = 2;
  string artist = 3;
  int64 date = 4;
  string description = 5;
  string image_url = 6;
}

message UpdateEventByEventIdResponse {
  Event event = 1;
}

message DeleteEventByIdRequest {
  string id = 1;
}

message DeleteEventByIdResponse {
  string message = 1;
}

message GetEventBySpecRequest {
  string field_name = 1;
}

message GetEventBySpecResponse {
  repeated Event events = 1;
}

message GetEventByFieldRequest {
  string field_name = 1;
}

message GetEventByFieldResponse {
  repeated Event events = 1;
}